# MLB2

./: .gitignore  AGENTS.md  MODEL_CARD.md  MODEL_V2_EVALUATION.md  MODEL_V3_EVALUATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-shadow.yml  pages.yml
artifacts/model-v1/: model-v1.json  validation-summary.json
scripts/: __init__.py  build_pages_feed.py
sites-app/: .env.example  .gitignore  package-lock.json  package.json
sites-app/.openai/: hosting.json
sites-app/app/: globals.css  layout.tsx  page.tsx  site-header.tsx  today-dashboard.tsx
sites-app/lib/: demo-feed.d.ts  demo-feed.mjs  feed-validation.d.ts  feed-validation.mjs  prediction-display.mjs
sites-app/scripts/: run-vinext.mjs
sites-app/tests/: feed-validation.test.mjs  prediction-display.test.mjs  rendered-html.test.mjs
sites-app/types/: cloudflare.d.ts
src/mlb_predictor/: __init__.py  audit.py  backtest.py  bullpen_backtest.py  cli.py  collector.py  evaluation.py  features.py  forecasting.py  gate.py  io.py  lineup.py  model_v3_backtest.py  model_v3_snapshot.py  modeling.py  models.py  normalizer.py  (+7 more)
tests/: conftest.py  test_audit.py  test_automation.py  test_backtest.py  test_bullpen_backtest.py  test_cli.py  test_collector.py  test_evaluation.py  test_features.py  test_forecasting.py  test_gate.py  test_io.py  test_lineup.py  test_model_v3_backtest.py  test_model_v3_snapshot.py  test_modeling.py  test_normalizer.py  test_pipeline.py  test_pitching.py  test_pitching_backtest.py  test_quality.py  test_run_strength.py  test_schedule_context.py  test_training.py
(+3 files in other folders)
