[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-pregame-dataset"
version = "0.1.0"
description = "재현 가능한 MLB 경기 전 예측 데이터셋 파이프라인"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
mlb-dataset = "mlb_predictor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
